--- a/public/css/application.css
+++ b/public/css/application.css
@@ -8,7 +8,7 @@
 #column1 {
   background-color: white;
   width: 80%;
-  float: right;
+  float: left;
   min-height: 630px;
   padding-left: 10%;
 }
